file organization done

--- a/src/about_screen.kv
+++ b/src/about_screen.kv
@@ -1,5 +1,5 @@
-<SettingsWindows>:
-    name:"Settings"
+<AboutScreen>:
+    name:"about"
     Button:
         name:"Go Back"
         text:'go back'
