--- a/src/play_screen.kv
+++ b/src/play_screen.kv
@@ -27,8 +27,7 @@
                 text:"go back"
                 size_hint:.8,1
                 on_release:
-                    app.root.current = "main"
-                    root.manager.transition.direction = "left"
+                    app.manager.pop()
             Button:
                 name:"Reshuffle"
                 text:"reshuffle"
