--- a/src/settings_screen.kv
+++ b/src/settings_screen.kv
@@ -1,5 +1,5 @@
-<AboutWindow>:
-    name:"about"
+<SettingsScreen>:
+    name:"Settings"
     Button:
         name:"Go Back"
         text:'go back'
