--- a/src/RkMain.kv
+++ b/src/RkMain.kv
@@ -1,9 +1,9 @@
-#:include navigation_screen_manager
 #:import play_screen play_screen
 #:import settings_screen settings_screen
 #:import about_screen about_screen
+#:import navigation_screen_manager navigation_screen_manager
 
-<MainWindow@BoxLayout>:
+<MainMenu@BoxLayout>:
     orientation:"vertical"
     BoxLayout:
         orientation: 'vertical'
@@ -23,23 +23,26 @@
                 text:"Play"
                 # pos_hint:{'center_x':.73}
                 # size_hint:(.3,1.)
-                on_press:app.manager.push("Play")
+                on_press:app.manager.push("PlayScreen")
         Button:
             text:"About"
-            on_press:app.manager.push("About")
+            on_press:app.manager.push("AboutScreen")
         Button:
             text:"Settings"
-            on_press:app.manager.push("About")
+            on_press:app.manager.push("SettingsScreen")
 
 <RkScreenManager>
-    PlayScreen:
-        name:"Play"
-        Play:
     Screen:
-        name:"About"
-        About:
+        name:"MainMenu"
+        MainMenu
     Screen:
-        name:"Settings"
-        Settings:
+        name:"PlayScreen"
+        PlayScreen:
+    Screen:
+        name:"AboutScreen"
+        AboutScreen:
+    Screen:
+        name:"SettingsScreen"
+        SettingsScreen:
 
 
