--- a/src/about_screen.kv
+++ b/src/about_screen.kv
@@ -3,3 +3,8 @@
     Button:
         name:"Go Back"
         text:'go back'
+        background_color: 0.1, 0.5, 0.6, 1
+        pos_hint: {"x":0.2, "y":.4}
+        size_hint: 0.3, 0.2
+        on_release:
+            app.manager.pop()
