--- a/src/RkMain.kv
+++ b/src/RkMain.kv
@@ -2,32 +2,42 @@
 #:import settings_screen settings_screen
 #:import about_screen about_screen
 #:import navigation_screen_manager navigation_screen_manager
+<MenuButton@Button>:
+    background_color:(0,0,0,0)
+    back_color:(1,0,1,1)
+    size_hint:.8,.3
+    border_radius:[18]
+    canvas.before:
+        Color:
+            rgba:
+                (48/255,84/255,150/255,1) if self.state == 'normal' else (0.6,0.6,1,1) # Color is red if button is not pressed, otherwise color is green
+        RoundedRectangle:
+            size:self.size
+            pos:self.pos
+            radius:[10]
 
 <MainMenu@BoxLayout>:
     orientation:"vertical"
     BoxLayout:
         orientation: 'vertical'
-
+        size_hint:.8,.8
+        pos_hint: {'center_x':.5,'center_y':.5}
         padding:100
         spacing:50
-        BoxLayout:
-            orientation:'horizontal'
-
-            TextInput:
-                multiline:False
-                id:mood
-                hint_text:"Enter mood or return for random"
-#                on_text:root.process()
-#                on_text_validate:root.go_play()
-            Button:
-                text:"Play"
-                # pos_hint:{'center_x':.73}
-                # size_hint:(.3,1.)
-                on_press:app.manager.push("PlayScreen")
-        Button:
+        TextInput:
+            size_hint:.8,.3
+            multiline:False
+            id:mood
+            hint_text:"Enter mood or return for random"
+#           on_text:root.process()
+#           on_text_validate:root.go_play()
+        MenuButton:
+            text:"Play"
+            on_press:app.manager.push("PlayScreen")
+        MenuButton:
             text:"About"
             on_press:app.manager.push("AboutScreen")
-        Button:
+        MenuButton:
             text:"Settings"
             on_press:app.manager.push("SettingsScreen")
 
