cropped image is displayed in tiles grid

--- a/src/View/play_screen.kv
+++ b/src/View/play_screen.kv
@@ -34,7 +34,7 @@
             DragButton:
                 id:image_button_1
                 ImageButton:
-                    id:image_on_button
+                    id:image_on_button_1
                     center_x: self.parent.center_x+20
                     center_y: self.parent.center_y+10
             DragButton:
