drag works but goes under the main grid

--- a/src/View/play_screen.kv
+++ b/src/View/play_screen.kv
@@ -31,30 +31,22 @@
             size_hint:1,.2
             orientation:'horizontal'
 
-            DragButton:
+            DragImage:
                 id:image_button_1
-                ImageButton:
-                    id:image_on_button_1
-                    center_x: self.parent.center_x+20
-                    center_y: self.parent.center_y+10
-            DragButton:
+                center_x: self.parent.center_x+20
+                center_y: self.parent.center_y+10
+            DragImage:
                 id:image_button_2
-                ImageButton:
-                    id:image_on_button_2
-                    center_x: self.parent.center_x+20
-                    center_y: self.parent.center_y+10
-            DragButton:
+                center_x: self.parent.center_x+20
+                center_y: self.parent.center_y+10
+            DragImage:
                 id:image_button_3
-                ImageButton:
-                    id:image_on_button_3
-                    center_x: self.parent.center_x+20
-                    center_y: self.parent.center_y+10
-            DragButton:
+                center_x: self.parent.center_x+20
+                center_y: self.parent.center_y+10
+            DragImage:
                 id:image_button_4
-                ImageButton:
-                    id:image_on_button_4
-                    center_x: self.parent.center_x+20
-                    center_y: self.parent.center_y+10
+                center_x: self.parent.center_x+20
+                center_y: self.parent.center_y+10
 
         Widget:
             id:game_canvas
